# full-stack-memory-agent

./: .env.example  .gitignore  CLEANUP_PLAN.md  README.md  agent.md  chat.py  docker-compose.yml  health.py  init.sql  main.py  pyproject.toml
agent/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
agent/alembic/: env.py
agent/alembic/versions/: 2eb7748ad4bb_initial_migration_create_conversations_.py
agent/libs/: database.py  llm_service.py  vector_service.py
agent/models/: conversation.py  message.py
agent/repositories/: conversation.py  message.py
agent/routes/: chat.py  conversations.py
agent/schemas/: conversation.py  message.py  request.py
agent/statics/: index.html
agent/tests/: conftest.py  test_health.py
client/: .dockerignore  Dockerfile  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
client/src/: app.d.ts  app.html
client/src/components/: ChatContainer.svelte  ConversationList.svelte  LoadingIndicator.svelte  MessageInput.svelte  MessageList.svelte
client/src/interfaces/: ChatDTO.ts  Conversation.ts  Message.ts
client/src/lib/: api.ts
client/src/lib/stores/: conversations.ts  currentConversation.ts
client/src/routes/: +page.svelte
libs/: llm_service.py  vector.py  vector_service.py
models/: requests.py
routes/: chat.py
statics/: index.html
