[project]
name = "full-stack-memory-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "numpy>=2.3.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
